chore: fixing the wrapping for the larger width

--- a/src/sass/_condensedCard.scss
+++ b/src/sass/_condensedCard.scss
@@ -220,6 +220,12 @@ $condensed-card-data-padding: 15px 20px 9px;
   }
 }
 
+@media screen and (min-width: $screen-lg-min) {
+  .usa-width-one-third.condensed-card {
+    margin-right: 2.35765%;
+  }
+}
+
 @media screen and (max-width: $screen-sm-min) {
   .usa-width-one-third.condensed-card,
   .usa-width-one-third.condensed-card:last-child {
